--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs: # là nơi khai báo cmd line được hỗ trợ bởi circle 
-  # sử dụng cmd line của node 
+orbs:
   node: circleci/node@3.0.0
   slack: circleci/slack@4.1
+  heroku: circleci/heroku@0.0.10
 jobs:
   check:
     docker:
@@ -14,7 +13,12 @@ jobs:
       - restore_cache:
           keys: 
             - v1-dependencies-{{ checksum "package-lock.json" }}
-      - run: npm install
+      - run: 
+          name: check format
+          command: |
+            npm install
+            npm run check
+            npm run build
       - save_cache:
           key: v1-dependencies-{{ checksum "package-lock.json" }}
           paths:
@@ -79,15 +83,16 @@ jobs:
       - run:
           name: pull code and start api_services
           command: ssh -oStrictHostKeyChecking=no ec2-user@3.143.216.10 -p 22 "cd /home/ec2-user/nodejs-aws-circleci; git pull origin main; npm install;pm2 restart all"
-  deploy-deroku:
-    machine:
-      enabled: true
+  deploy-heroku:
+    # machine:
+    #   enabled: true
+    executor: heroku/default
     steps:
       - checkout
-      - run:
-          name: deploy main to heroku
-          command: |
-            git push https://heroku:$MY_API_KEY@git.heroku.com/demo-node-circleci.git main
+      - heroku/install
+      # - run:
+          # name: deploy main to heroku
+      - heroku/deploy-via-git
       - slack/notify:
           event: fail
           custom: |
@@ -142,12 +147,16 @@ workflows:
   my-flow:
     jobs:
       - check:
-          context: vuong
-      - deploy-deroku:
-          requires: 
-            - check
+          filters:
+            branches:
+              ignore: 
+                - develop
+          context: SLACK_NOTIFICATION
+      - deploy-heroku:
+          # requires:
+          #   - check
           filters:
             branches:
               only:
-                - main
-          context: vuong
+                - develop
+          context: SLACK_NOTIFICATION
